--- a/PersonalExpenseTracker/Components/Layout/NavMenu.razor
+++ b/PersonalExpenseTracker/Components/Layout/NavMenu.razor
@@ -10,17 +10,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-grid-door-fill-nav-menu" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="transaction">
+                <span class="bi bi-grid-square-fill-nav-menu" aria-hidden="true"></span> Transaction
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="debt">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Debts
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tag">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tag
             </NavLink>
         </div>
     </nav>
