--- a/PersonalExpenseTracker/Components/_Imports.razor
+++ b/PersonalExpenseTracker/Components/_Imports.razor
@@ -1,14 +1,20 @@
-﻿@using System.Net.Http
+﻿
+@using System.Net.Http
 @using System.Net.Http.Json
+
 @using Blazored.LocalStorage
+
+@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+
 @using Microsoft.JSInterop
+
 @using PersonalExpenseTracker
 @using PersonalExpenseTracker.Components
 @using PersonalExpenseTracker.Components.Layout
+
 @using MudBlazor
 
 @inject ILocalStorageService LocalStorage
