--- a/PersonalExpenseTracker/Components/Layout/MainLayout.razor
+++ b/PersonalExpenseTracker/Components/Layout/MainLayout.razor
@@ -1,27 +1,86 @@
 ﻿@inherits LayoutComponentBase
 
-@* Required *@
-<MudThemeProvider />
-<MudPopoverProvider />
+<CascadingValue Value="this">
+    <MudRTLProvider RightToLeft="@RightToLeft">
+        <MudThemeProvider Theme="Theme" />
+        <MudPopoverProvider />
+        <MudDialogProvider />
+        <MudSnackbarProvider />
+        @if (UserDetails == null || UserDetails?.Id == Guid.Empty)
+        {
+            <MudContainer MaxWidth="MaxWidth.Large" Style="height: 100vh; display: flex; justify-content: center; align-items: center;">
+                <MudPaper Elevation="25" Class="pa-8">
+                    @Body
+                </MudPaper>
+            </MudContainer>
+        }
+        else
+        {
+            <MudLayout>
+                <MudAppBar Class="topbar bg-white" Elevation="0">
+                    <div class="d-flex align-items-center justify-content-start">
+                        <MudTooltip Text="Toggle Drawer" Color="Color.Primary">
+                            <MudIconButton Class="drawer-button" Icon="@Icons.Material.Rounded.Notes" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle"/>
+                        </MudTooltip>
 
-@* Needed for dialogs *@
-<MudDialogProvider />
-
-@* Needed for snackbars *@
-<MudSnackbarProvider />
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+                        <MudText Typo="Typo.h6" HtmlTag="h1" Color="Color.Inherit" Class="topbar-text ms-2">
+                            @PageTitle
+                        </MudText>
+                    </div>
+                    <div class="d-flex align-items-center gap-x-4">
+                        <MudMenu AnchorOrigin="Origin.BottomRight" LockScroll="true" TransformOrigin="Origin.TopRight">
+                            <ActivatorContent>
+                                <MudAvatar Style="width: 36px; height: 36px;" Color="Color.Secondary" Variant="Variant.Outlined">
+                                    @UserDetails?.Name.ToUpper().FirstOrDefault()
+                                </MudAvatar>
+                            </ActivatorContent>
+                            <ChildContent>
+                                <MudPaper Elevation="0" Class="profile-dropdown">
+                                    <MudCard Elevation="0">
+                                        <MudCardContent Class="pa-2 d-flex align-items-center gap-x-3">
+                                            <MudAvatar Style="width: 36px; height: 36px;" Color="Color.Secondary" Variant="Variant.Outlined">
+                                                @UserDetails?.Name.ToUpper().FirstOrDefault()
+                                            </MudAvatar>
+                                            <MudPaper Elevation="0" Class="bg-transparent">
+                                                <MudText Typo="Typo.subtitle2" Class="fw-bold text-dark user-name">
+                                                    @UserDetails?.Name
+                                                </MudText>
+                                                <MudText Typo="Typo.subtitle2" Class="text-normal user-email">@UserDetails?.UserName</MudText>
+                                            </MudPaper>
+                                        </MudCardContent>
+                                    </MudCard>
+                                    <MudDivider/>
+                                    @* TODO: Implement a profile page. *@
+                                    @* <MudMenuItem> *@
+                                    @*     <NavLink href="/profile" class="d-flex align-items-center gap-2"> *@
+                                    @*         <MudIcon Icon="@Icons.Material.Outlined.Person" Style="font-size: 20px; fill: #141414"/> *@
+                                    @*         <MudText Typo="Typo.subtitle2" Class="text-dark">My Profile</MudText> *@
+                                    @*     </NavLink> *@
+                                    @* </MudMenuItem> *@
+                                    <MudDivider/>
+                                    <MudMenuItem>
+                                        <NavLink class="d-flex align-items-center gap-2" @onclick="LogoutHandler">
+                                            <MudIcon Icon="@Icons.Material.Outlined.Logout" Style="font-size: 20px; fill: #141414"/>
+                                            <MudText Typo="Typo.subtitle2" Class="text-dark">Sign Out</MudText>
+                                        </NavLink>
+                                    </MudMenuItem>
+                                </MudPaper>
+                            </ChildContent>
+                        </MudMenu>
+                    </div>
+                </MudAppBar>
+                <MudDrawer @bind-Open="@DrawerOpen" Elevation="0" ClipMode="DrawerClipMode.Never" Class="sidebar" Width="280px" Height="100%">
+                    <NavMenu />
+                </MudDrawer>
+                <MudMainContent>
+                    <MudContainer MaxWidth="MaxWidth.False" Class="py-6 px-lg-8">
+                        @Body
+                        <MudScrollToTop TopOffset="400" Style="z-index:2000;">
+                            <MudFab StartIcon="@Icons.Material.Filled.KeyboardArrowUp" Color="Color.Primary"/>
+                        </MudScrollToTop>
+                    </MudContainer>
+                </MudMainContent>
+            </MudLayout>
+        }
+    </MudRTLProvider>
+</CascadingValue>
