--- a/PersonalExpenseTracker/Components/Layout/NavMenu.razor
+++ b/PersonalExpenseTracker/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">PersonalExpenseTracker</a>
+        <a class="navbar-brand" href="">Personal Expense Tracker</a>
     </div>
 </div>
 
@@ -9,23 +9,23 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
                 <span class="bi bi-grid-door-fill-nav-menu" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="transaction">
+            <NavLink class="nav-link" href="tags">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tag
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="transactions">
                 <span class="bi bi-grid-square-fill-nav-menu" aria-hidden="true"></span> Transaction
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="debt">
+            <NavLink class="nav-link" href="debts">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Debts
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="tag">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tag
             </NavLink>
         </div>
     </nav>
