--- a/PersonalExpenseTracker/Components/Layout/NavMenu.razor
+++ b/PersonalExpenseTracker/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Personal Expense Tracker</a>
+        <a class="navbar-brand" href="dashboard">Personal Expense Tracker</a>
     </div>
 </div>
 
@@ -9,7 +9,7 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="dashboard" Match="NavLinkMatch.All">
                 <span class="bi bi-grid-door-fill-nav-menu" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
