--- a/PersonalExpenseTracker/wwwroot/css/app.css
+++ b/PersonalExpenseTracker/wwwroot/css/app.css
@@ -110,3 +110,10 @@ h1:focus {
 .profile-dropdown .user-designation {
     line-height: 16px;
 }
+
+.inner-padding {
+    background: #fff;
+    border-radius: 14px;
+    padding: 24px;
+    border: 1px solid var(--mud-palette-divider);
+}
