--- a/PersonalExpenseTracker/Components/Pages/Tags/Tags.razor
+++ b/PersonalExpenseTracker/Components/Pages/Tags/Tags.razor
@@ -7,7 +7,7 @@
             <MudTextField T="string" @bind-Value="Search" Immediate="true" Placeholder="Search" Variant="Variant.Text" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" Class="search-input text-dark" />
         </div>
         <div class="filter-right">
-            <MudButton Color="Color.Primary" Variant="Variant.Filled" DropShadow="false" Class="btn btn--md" OnClick="InsertTag" StartIcon="@Icons.Material.Filled.Add" Disabled="IsInsertTagModalOpen">Add Tags</MudButton>
+            <MudButton Color="Color.Primary" Variant="Variant.Filled" DropShadow="false" Class="btn btn--md" OnClick="OpenCloseInsertTagModal" StartIcon="@Icons.Material.Filled.Add" Disabled="IsInsertTagModalOpen">Add Tags</MudButton>
         </div>
     </div>
 
@@ -62,20 +62,20 @@
                                   Required="true"
                                   Immediate="true"/>
                 </div>
-                @* <div class="mb-3"> *@
-                @*     <MudColorPicker Label="Background Color" *@
-                @*                     ColorPickerView="ColorPickerView.Spectrum" *@
-                @*                     @bind-Value="@TagModel.BackgroundColor" *@
-                @*                     For="@(() => TagModel.BackgroundColor)" *@
-                @*                     Variant="Variant.Outlined" /> *@
-                @* </div> *@
-                @* <div class="mb-3"> *@
-                @*     <MudColorPicker Label="Text Color" *@
-                @*                     ColorPickerView="ColorPickerView.Spectrum" *@
-                @*                     @bind-Value="@TagModel.TextColor" *@
-                @*                     For="@(() => TagModel.TextColor)" *@
-                @*                     Variant="Variant.Outlined" /> *@
-                @* </div> *@
+                <div class="mb-3">
+                    <MudColorPicker Label="Background Color"
+                                    ColorPickerView="ColorPickerView.Spectrum"
+                                    @bind-Value="@TagModel.BackgroundColor"
+                                    For="@(() => TagModel.BackgroundColor)"
+                                    Variant="Variant.Outlined" />
+                </div>
+                <div class="mb-3">
+                    <MudColorPicker Label="Text Color"
+                                    ColorPickerView="ColorPickerView.Spectrum"
+                                    @bind-Value="@TagModel.TextColor"
+                                    For="@(() => TagModel.TextColor)"
+                                    Variant="Variant.Outlined" />
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-secondary" @onclick="@OpenCloseInsertTagModal">Discard</button>
                     <button type="submit" class="btn btn-outline-dark">Submit</button>
