Implementation of Transactions.

--- a/PersonalExpenseTracker/Components/Layout/EmptyLayout.razor
+++ b/PersonalExpenseTracker/Components/Layout/EmptyLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div>
-    <MudThemeProvider Theme="MudTheme" />
+    <MudThemeProvider Theme="Theme" />
     <MudPopoverProvider/>
     <MudDialogProvider/>
     <MudSnackbarProvider/>
