--- a/PersonalExpenseTracker/Components/Pages/Transactions/Transactions.razor
+++ b/PersonalExpenseTracker/Components/Pages/Transactions/Transactions.razor
@@ -1,1 +1,25 @@
 ﻿@page "/transactions"
+@using PersonalExpenseTracker.Models.Constant
+
+<div>
+    <MudTabs Elevation="0" @bind-ActivePanelIndex="ActivePanelIndex" Class="gap-3">
+        <MudTabPanel Text="All" BadgeColor="Color.Secondary" BadgeData="@TransactionsCount.AllCount">
+            @if (ActivePanelIndex == 0)
+            {
+                <TransactionDetails OnTransactionsCountUpdate="HandleTransactionCounts" />
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Inflows" BadgeColor="Color.Secondary" BadgeData="@TransactionsCount.InflowsCount">
+            @if (ActivePanelIndex == 1)
+            {
+                <TransactionDetails TransactionType="TransactionType.Inflows" OnTransactionsCountUpdate="HandleTransactionCounts" />
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Outflows" BadgeColor="Color.Secondary" BadgeData="@TransactionsCount.OutflowsCount">
+            @if (ActivePanelIndex == 2)
+            {
+                <TransactionDetails TransactionType="TransactionType.Outflows" OnTransactionsCountUpdate="HandleTransactionCounts" />
+            }
+        </MudTabPanel>
+    </MudTabs>
+</div>
