--- a/PersonalExpenseTracker/Components/Layout/Filter.razor
+++ b/PersonalExpenseTracker/Components/Layout/Filter.razor
@@ -15,6 +15,7 @@
                 </div>
                 <div class="d-flex justify-content-end gap-3">
                     <MudButton Color="Color.Error" Variant="Variant.Outlined" OnClick="() => OnApplyFilter(false)">Discard</MudButton>
+                    <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="OnClearFilter">Clear</MudButton>
                     <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="() => OnApplyFilter(true)">Submit</MudButton>
                 </div>
             </div>
