--- a/PersonalExpenseTracker/Components/Pages/Transactions/TransactionDetails.razor
+++ b/PersonalExpenseTracker/Components/Pages/Transactions/TransactionDetails.razor
@@ -22,13 +22,13 @@
                 </MudSelect>
                 <MudDatePicker @bind-Date="StartDate"
                                Label="Start Date"
-                               Variant="Variant.Outlined"
+                               Variant="Variant.Text"
                                DateFormat="dd.MM.yyyy"
                                Placeholder="Select a Start Date"
                                PickerVariant="PickerVariant.Dialog" />
                 <MudDatePicker @bind-Date="EndDate"
                                Label="End Date"
-                               Variant="Variant.Outlined"
+                               Variant="Variant.Text"
                                DateFormat="dd.MM.yyyy"
                                Placeholder="Select a End Date"
                                PickerVariant="PickerVariant.Dialog" />
