--- a/PersonalExpenseTracker/Components/Layout/MainLayout.razor.css
+++ b/PersonalExpenseTracker/Components/Layout/MainLayout.razor.css
@@ -8,8 +8,13 @@ main {
     flex: 1;
 }
 
-.sidebar {
+::deep .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    z-index: 10;
+}
+
+::deep .topbar{
+    z-index: 10;
 }
 
 .top-row {
@@ -21,29 +26,29 @@ main {
     align-items: center;
 }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
+.top-row a, .top-row .btn-link {
+    white-space: nowrap;
+    margin-left: 1.5rem;
+    text-decoration: none;
+}
 
-        .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-            text-decoration: underline;
-        }
+.top-row a:hover, .top-row .btn-link:hover {
+    text-decoration: underline;
+}
 
-        .top-row ::deep a:first-child {
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+.top-row a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 @media (max-width: 640.98px) {
     .top-row {
         justify-content: space-between;
     }
 
-        .top-row ::deep a, .top-row ::deep .btn-link {
-            margin-left: 0;
-        }
+    .top-row a, .top-row .btn-link {
+        margin-left: 0;
+    }
 }
 
 @media (min-width: 641px) {
@@ -51,11 +56,12 @@ main {
         flex-direction: row;
     }
 
-    .sidebar {
+    ::deep .sidebar {
         width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
+        z-index: 10;
     }
 
     .top-row {
@@ -64,11 +70,11 @@ main {
         z-index: 1;
     }
 
-        .top-row.auth ::deep a:first-child {
-            flex: 1;
-            text-align: right;
-            width: 0;
-        }
+    .top-row.auth a:first-child {
+        flex: 1;
+        text-align: right;
+        width: 0;
+    }
 
     .top-row, article {
         padding-left: 2rem !important;
