--- a/Cashify/Components/Pages/Debts/Debts.razor
+++ b/Cashify/Components/Pages/Debts/Debts.razor
@@ -1,1 +1,30 @@
 ﻿@page "/debts"
+
+<div>
+    <MudTabs Elevation="0" @bind-ActivePanelIndex="ActivePanelIndex" Class="gap-3">
+        <MudTabPanel Text="All" BadgeColor="Color.Secondary" BadgeData="@DebtsCount.All">
+            @if (ActivePanelIndex == 0)
+            {
+                <DebtDetails OnDebtsCountUpdate="HandleDebtCounts" />
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Cleared" BadgeColor="Color.Secondary" BadgeData="@DebtsCount.Cleared">
+            @if (ActivePanelIndex == 1)
+            {
+                <DebtDetails DebtStatus="DebtStatus.Cleared" OnDebtsCountUpdate="HandleDebtCounts" />
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Pending" BadgeColor="Color.Secondary" BadgeData="@DebtsCount.Pending">
+            @if (ActivePanelIndex == 2)
+            {
+                <DebtDetails DebtStatus="DebtStatus.Pending" OnDebtsCountUpdate="HandleDebtCounts" />
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Overdue" BadgeColor="Color.Secondary" BadgeData="@DebtsCount.PastDue">
+            @if (ActivePanelIndex == 3)
+            {
+                <DebtDetails DebtStatus="DebtStatus.Overdue" OnDebtsCountUpdate="HandleDebtCounts" />
+            }
+        </MudTabPanel>
+    </MudTabs>
+</div>
