Fixes and Changes.

--- a/Cashify/Components/Pages/Authentication/Register.razor
+++ b/Cashify/Components/Pages/Authentication/Register.razor
@@ -1,46 +1,61 @@
 ﻿@page "/register"
 @layout EmptyLayout
 
-<div class="register-container">
-    <div class="register-left">
-        <div class="register-form-container">
-            <h2 class="fw-bold mb-2">Registration</h2>
-            <p class="mb-4">Register your account to continue with CashFlo.</p>
-            <EditForm Model="@RegistrationRequest" OnValidSubmit="RegistrationHandler">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <InputText id="username" class="form-control" @bind-Value="RegistrationRequest.Username" placeholder="Enter your username" />
+<div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+                <div class="border border-3 border-secondary rounded-2">
+                    <div class="card bg-white shadow-lg">
+                        <div class="card-body p-5">
+                            <EditForm Model="RegistrationRequest" FormName="Registration" OnSubmit="RegisterHandler">
+                                <DataAnnotationsValidator />
+                                <h2 class="fw-bold mb-2">Registration</h2>
+                                <p class="mb-4">Please register your account via username and password.</p>
+                                <div class="mb-3">
+                                    <MudTextField @bind-Value="RegistrationRequest.Username"
+                                                  Label="Username"
+                                                  For="@(() => RegistrationRequest.Username)"
+                                                  Variant="Variant.Outlined"
+                                                  Placeholder="Enter your username"
+                                                  Immediate="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <MudSelect T="@(Currency)"
+                                               @bind-Value="RegistrationRequest.Currency"
+                                               Label="Currency"
+                                               Required="true"
+                                               Variant="Variant.Outlined"
+                                               AnchorOrigin="Origin.BottomCenter">
+                                        <MudSelectItem Value="@(Currency.None)">Select a Currency</MudSelectItem>
+                                        <MudSelectItem Value="@(Currency.AUD)">AUD</MudSelectItem>
+                                        <MudSelectItem Value="@(Currency.EUR)">EUR</MudSelectItem>
+                                        <MudSelectItem Value="@(Currency.INR)">INR</MudSelectItem>
+                                        <MudSelectItem Value="@(Currency.NPR)">NRP</MudSelectItem>
+                                        <MudSelectItem Value="@(Currency.USD)">USD</MudSelectItem>
+                                    </MudSelect>
+                                </div>
+                                <div class="mb-3">
+                                    <MudTextField @bind-Value="RegistrationRequest.Password"
+                                                  Label="Password"
+                                                  For="@(() => RegistrationRequest.Password)"
+                                                  Variant="Variant.Outlined"
+                                                  InputType="InputType.Password"
+                                                  Placeholder="Enter your password"
+                                                  Immediate="true"/>
+                                </div>
+                                <div class="mt-4 d-grid">
+                                    <button class="btn btn-outline-dark" type="submit">Register</button>
+                                    <div class="mt-4 d-flex justify-content-center">
+                                        <p class="mb-4">Already have an account,</p>
+                                        <a href="login">&nbsp; Click here.</a>
+                                    </div>
+                                </div>
+                            </EditForm>
+                        </div>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <InputText type="password" id="password" class="form-control" @bind-Value="RegistrationRequest.Password" placeholder="Enter your password" />
-                </div>
-                <div class="mb-3">
-                    <label for="currency" class="form-label">Currency</label>
-                    <InputSelect id="currency" class="form-control" @bind-Value="RegistrationRequest.Currency">
-                        <option value="NPR">NPR</option>
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
-                        <option value="GBP">GBP</option>
-                        <option value="INR">INR</option>
-                    </InputSelect>
-                </div>
-
-                <div class="mt-4 d-grid">
-                    <button type="submit" class="btn-submit">
-                        Sign Up
-                    </button>
-                </div>
-            </EditForm>
-
-            <div class="mt-3 text-center">
-                <p>Already have an account? <a href="/login" >Login</a></p>
             </div>
-        </div>
-    </div>
-    <div class="register-right">
-        <div class="image-section">
-            <img src="login.svg" alt="Background Image"/>
         </div>
     </div>
 </div>
