--- a/Cashify/Components/Pages/Authentication/Login.razor
+++ b/Cashify/Components/Pages/Authentication/Login.razor
@@ -1,34 +1,45 @@
 ﻿@page "/login"
 @layout EmptyLayout
 
-<div class="login-container">
-    <div class="login-left">
-        <div class="image-section">
-            <img src="login.svg" alt="Background Image"/>
-        </div>
-    </div>
-    <div class="login-right">
-        <div class="login-form-container">
-            <h2 class="fw-bold mb-2">Login</h2>
-            <p class="mb-4">Provide your login credentials to access your CashFlo account.</p>
-            <EditForm Model="@LoginRequest" OnValidSubmit="LoginHandler">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <InputText id="username" class="form-control" @bind-Value="LoginRequest.Username" placeholder="Enter your username"/>
+<div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+                <div class="border border-3 border-secondary rounded-2">
+                    <div class="card bg-white shadow-lg">
+                        <div class="card-body p-5">
+                            <EditForm Model="LoginRequest" FormName="Registration" OnSubmit="LoginHandler">
+                                <DataAnnotationsValidator />
+                                <h2 class="fw-bold mb-2">Login</h2>
+                                <p class="mb-4">Please login into your account via username and password.</p>
+                                <div class="mb-3">
+                                    <MudTextField @bind-Value="LoginRequest.Username"
+                                                  Label="Username"
+                                                  For="@(() => LoginRequest.Username)"
+                                                  Variant="Variant.Outlined"
+                                                  Placeholder="Enter your username"
+                                                  Immediate="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <MudTextField @bind-Value="LoginRequest.Password"
+                                                  Label="Password"
+                                                  For="@(() => LoginRequest.Password)"
+                                                  Variant="Variant.Outlined"
+                                                  InputType="InputType.Password"
+                                                  Placeholder="Enter your password"
+                                                  Immediate="true"/>
+                                </div>
+                                <div class="mt-4 d-grid">
+                                    <button class="btn btn-outline-dark" type="submit">Login</button>
+                                    <div class="mt-4 d-flex justify-content-center">
+                                        <p class="mb-4">Create a new account,</p>
+                                        <a href="register">&nbsp; Click here.</a>
+                                    </div>
+                                </div>
+                            </EditForm>
+                        </div>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <InputText type="password" id="password" class="form-control" @bind-Value="LoginRequest.Password" placeholder="Enter your password"/>
-                </div>
-                <div class="mt-4 d-grid">
-                    <button type="submit" class="btn-submit">
-                        Sign In
-                    </button>
-                </div>
-            </EditForm>
-
-            <div class="mt-3 text-center">
-                <p>Do not have an account? <a href="/register">Register</a></p>
             </div>
         </div>
     </div>
